--- a/SPPM/SPPM/SPPM.vcxproj
+++ b/SPPM/SPPM/SPPM.vcxproj
@@ -104,6 +104,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <AdditionalIncludeDirectories>../;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -118,6 +119,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <AdditionalIncludeDirectories>../;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -128,6 +130,15 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="SPPM.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="aabb.hpp" />
+    <ClInclude Include="bvh.hpp" />
+    <ClInclude Include="photon.hpp" />
+    <ClInclude Include="ray.hpp" />
+    <ClInclude Include="renderable.hpp" />
+    <ClInclude Include="scene.hpp" />
+    <ClInclude Include="stb_image.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
