Fix some bugs in the converter Build a model for test Generate the map

--- a/SPPM/SPPM/SPPM.vcxproj
+++ b/SPPM/SPPM/SPPM.vcxproj
@@ -135,6 +135,7 @@
     <ClInclude Include="aabb.hpp" />
     <ClInclude Include="bvh.hpp" />
     <ClInclude Include="photon.hpp" />
+    <ClInclude Include="photon_map.hpp" />
     <ClInclude Include="ray.hpp" />
     <ClInclude Include="renderable.hpp" />
     <ClInclude Include="scene.hpp" />
