--- a/SPPM/SPPM/SPPM.vcxproj.filters
+++ b/SPPM/SPPM/SPPM.vcxproj.filters
@@ -41,5 +41,8 @@
     <ClInclude Include="scene.hpp">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="photon_map.hpp">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
