--- a/SPPM/SPPM/SPPM.vcxproj.filters
+++ b/SPPM/SPPM/SPPM.vcxproj.filters
@@ -44,5 +44,8 @@
     <ClInclude Include="photon_map.hpp">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="camera.hpp">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
