--- a/SPPM/SPPM/SPPM.vcxproj.filters
+++ b/SPPM/SPPM/SPPM.vcxproj.filters
@@ -47,5 +47,14 @@
     <ClInclude Include="camera.hpp">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="photon_kdt.hpp">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="stb_image_write.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="stb_image_resize.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
