--- a/SPPM_PM/SPPM/SPPM.vcxproj.filters
+++ b/SPPM_PM/SPPM/SPPM.vcxproj.filters
@@ -59,5 +59,8 @@
     <ClInclude Include="SppmManager.hpp">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="config_parse.hpp">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
